--- a/index.html
+++ b/index.html
@@ -1,5 +1,15 @@
+<!DOCTYPE html>
 <html>
-	<body>
-		tada
-	</body>
+    <head>
+        <meta charset="utf-8">
+        <title>Web, words and coffee</title>
+        <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
+
+        <link rel="stylesheet" href="css/asbjornenge.css">
+        <script src="js/lib/jquery-1.9.0.min.js"></script>
+        <script src="js/__init__.js"></script>
+    </head>
+    <body>
+        <h1>tada</h1>
+    </body>
 </html>
