--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
         <title>Web, words and coffee</title>
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 
+        <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/asbjornenge.css">
         <script src="js/lib/jquery-1.9.0.min.js"></script>
-        <script src="js/__init__.js"></script>
+        <script src="js/__init__.js" type="text/javascript"></script>
     </head>
     <body>
-        <h1>tada</h1>
+        <div id="head"></div>
+        <div id="content"></div>
+        <div id="footer"></div>
     </body>
 </html>
