--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
         <link rel="stylesheet" href="css/reset.css">
         <link rel="stylesheet" href="css/asbjornenge.css">
+        <script src="js/lib/ga.js"></script>
         <script src="js/lib/jquery-1.9.0.min.js"></script>
         <script src="js/__init__.js" type="text/javascript"></script>
     </head>
