--- a/index.html
+++ b/index.html
@@ -6,13 +6,24 @@
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 
         <link rel="stylesheet" href="css/reset.css">
+        <link rel="stylesheet" href="css/fonts.css">
         <link rel="stylesheet" href="css/asbjornenge.css">
+        <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Arizonia|Merienda' type='text/css'>
         <script src="js/lib/ga.js"></script>
         <script src="js/lib/jquery-1.9.0.min.js"></script>
         <script src="js/__init__.js" type="text/javascript"></script>
     </head>
     <body>
-        <div id="head"></div>
+        <div id="head">
+            <img id="logo" src="img/avatar_big.jpeg"/>
+            <div id="label">Web Code & Coffee</div>
+            <ul id="menu">
+                <li>About</li>
+                <li>Crly</li>
+                <li>Software</li>
+                <li>WC&C</li>
+            </ul>
+        </div>
         <div id="content"></div>
         <div id="footer"></div>
     </body>
