--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Arizonia|Merienda' type='text/css'>
         <script src="js/lib/ga.js"></script>
         <script src="js/lib/jquery-1.9.0.min.js"></script>
-        <script src="js/__init__.js" type="text/javascript"></script>
+        <script src="js/init.js" type="text/javascript"></script>
     </head>
     <body>
         <div id="head">
