Some more gimp work

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Web, words and coffee</title>
+        <title>Web, Words & Coffee</title>
         <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
 
         <link rel="stylesheet" href="css/reset.css">
