Started doing mako

--- a/base.html
+++ b/base.html
@@ -16,7 +16,7 @@
     <body>
         <div id="head">
             <img id="logo" src="/img/avatar_big.jpeg"/>
-            <div id="label">Web Code & Coffee</div>
+            <div id="label"><%block name="title"/></div>
             <ul id="menu">
                 <li>About</li>
                 <li>Crly</li>
@@ -24,7 +24,7 @@
                 <li>WC&C</li>
             </ul>
         </div>
-        <div id="content"></div>
+        <div id="content"><%block name="content"/></div>
         <div id="footer"></div>
     </body>
 </html>
