--- a/wcc/index.html
+++ b/wcc/index.html
@@ -16,7 +16,7 @@
     <body>
         <div id="head">
             <img id="logo" src="/img/avatar_big.jpeg"/>
-            <div id="label">Web Code & Coffee</div>
+            <div id="label">WCC</div>
             <ul id="menu">
                 <li>About</li>
                 <li>Crly</li>
