Added main mako files

--- a/base.html
+++ b/base.html
@@ -18,12 +18,13 @@
             <img id="logo" src="/img/avatar_big.jpeg"/>
             <div id="label"><%block name="title"/></div>
             <ul id="menu">
-                <li>About</li>
-                <li>Crly</li>
-                <li>Software</li>
-                <li>WC&C</li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/crly.html">Crly</a></li>
+                <li><a href="/software.html">Software</a></li>
+                <li><a href="/">WC&C</a></li>
             </ul>
         </div>
+        <div style="clear:both"></div>
         <div id="content"><%block name="content"/></div>
         <div id="footer"></div>
     </body>
