--- a/crly.html
+++ b/crly.html
@@ -16,7 +16,7 @@
     <body>
         <div id="head">
             <img id="logo" src="/img/avatar_big.jpeg"/>
-            <div id="label">Web Code & Coffee</div>
+            <div id="label">Curly Bracket</div>
             <ul id="menu">
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/crly.html">Crly</a></li>
@@ -25,7 +25,11 @@
             </ul>
         </div>
         <div style="clear:both"></div>
-        <div id="content"></div>
+        <div id="content">
+	<p>
+		Exciting stuff will appear here soon :-D
+	</p>
+</div>
         <div id="footer"></div>
     </body>
 </html>
