--- a/software.html
+++ b/software.html
@@ -16,15 +16,20 @@
     <body>
         <div id="head">
             <img id="logo" src="/img/avatar_big.jpeg"/>
-            <div id="label">WCC</div>
+            <div id="label">Software</div>
             <ul id="menu">
-                <li>About</li>
-                <li>Crly</li>
-                <li>Software</li>
-                <li>WC&C</li>
+                <li><a href="/about.html">About</a></li>
+                <li><a href="/crly.html">Crly</a></li>
+                <li><a href="/software.html">Software</a></li>
+                <li><a href="/">WC&C</a></li>
             </ul>
         </div>
-        <div id="content"></div>
+        <div style="clear:both"></div>
+        <div id="content">
+	<p>
+		My Software Projects.
+	</p>
+</div>
         <div id="footer"></div>
     </body>
 </html>
