Added markdown support

--- a/software.html
+++ b/software.html
@@ -25,10 +25,21 @@
             </ul>
         </div>
         <div style="clear:both"></div>
-        <div id="content">
-	<p>
-		My Software Projects.
-	</p>
+        <div id="content"><h1>Centipede</h1>
+
+<blockquote>
+<p>A tiny RESTful API framework</p>
+</blockquote>
+
+<p><a href="http://asbjornenge.com/soft/centipede.html">Centipede</a> aims to facilitate the creation RESTful API&#39;s.</p>
+
+<h1>TapJS</h1>
+
+<blockquote>
+<p>Touch events for touch devices</p>
+</blockquote>
+
+<p>Trallalei</p>
 </div>
         <div id="footer"></div>
     </body>
