Added support for mako only

--- a/about.html
+++ b/about.html
@@ -16,7 +16,7 @@
     <body>
         <div id="head">
             <img id="logo" src="/img/avatar_big.jpeg"/>
-            <div id="label">About</div>
+            <div id="label">Web, Code & Coffee</div>
             <ul id="menu">
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/crly.html">Crly</a></li>
@@ -25,10 +25,21 @@
             </ul>
         </div>
         <div style="clear:both"></div>
-        <div id="content">
-	<p>
-		Some about information here.
-	</p>
+        <div id="content"><h1>About</h1>
+
+<p>My name is Asbjorn, and that&#39;s about it.</p>
+
+<h2>Software</h2>
+
+<p>I do some hacking.</p>
+
+<h2>Music</h2>
+
+<p>I hum and strum.</p>
+
+<h2>Coffee</h2>
+
+<p>Coffee is a big part of my life.</p>
 </div>
         <div id="footer"></div>
     </body>
