--- a/crly.html
+++ b/crly.html
@@ -16,7 +16,7 @@
     <body>
         <div id="head">
             <img id="logo" src="/img/avatar_big.jpeg"/>
-            <div id="label">Curly Bracket</div>
+            <div id="label">Web, Code & Coffee</div>
             <ul id="menu">
                 <li><a href="/about.html">About</a></li>
                 <li><a href="/crly.html">Crly</a></li>
