--- a/about.html
+++ b/about.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" href="/css/reset.css">
         <link rel="stylesheet" href="/css/fonts.css">
         <link rel="stylesheet" href="/css/asbjornenge.css">
-        <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Arizonia|Merienda' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Elsie' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Bilbo+Swash+Caps' rel='stylesheet' type='text/css'>
         <script src="/js/lib/ga.js"></script>
         <script src="/js/lib/jquery-1.9.0.min.js"></script>
         <script src="/js/init.js" type="text/javascript"></script>
@@ -18,16 +19,16 @@
             <img id="logo" src="/img/avatar_big.jpeg"/>
             <div id="label">Web, Code & Coffee</div>
             <ul id="menu">
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/crly.html">Crly</a></li>
-                <li><a href="/software.html">Software</a></li>
+                <li class="about"><a href="/about.html">About</a></li>
+                <li class="crly"><a href="/crly.html">Crly</a></li>
+                <li class="software"><a href="/software.html">Software</a></li>
                 <li><a href="/">WC&C</a></li>
             </ul>
         </div>
         <div style="clear:both"></div>
         <div id="content"><h1>About</h1>
 
-<p>My name is Asbjorn, and that&#39;s about it.</p>
+<p>We&#39;re all gonna die, let&#39;s make a fucking nice cake!?</p>
 
 <h2>Software</h2>
 
