--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" href="/css/reset.css">
         <link rel="stylesheet" href="/css/fonts.css">
         <link rel="stylesheet" href="/css/asbjornenge.css">
-        <link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Arizonia|Merienda' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Elsie' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Bilbo+Swash+Caps' rel='stylesheet' type='text/css'>
         <script src="/js/lib/ga.js"></script>
         <script src="/js/lib/jquery-1.9.0.min.js"></script>
         <script src="/js/init.js" type="text/javascript"></script>
@@ -18,15 +19,15 @@
             <img id="logo" src="/img/avatar_big.jpeg"/>
             <div id="label">Web, Code & Coffee</div>
             <ul id="menu">
-                <li><a href="/about.html">About</a></li>
-                <li><a href="/crly.html">Crly</a></li>
-                <li><a href="/software.html">Software</a></li>
+                <li class="about"><a href="/about.html">About</a></li>
+                <li class="crly"><a href="/crly.html">Crly</a></li>
+                <li class="software"><a href="/software.html">Software</a></li>
                 <li><a href="/">WC&C</a></li>
             </ul>
         </div>
         <div style="clear:both"></div>
         <div id="content">
-	loop over blog here...
+	loop over blog here... and some things
 </div>
         <div id="footer"></div>
     </body>
