--- a/about.html
+++ b/about.html
@@ -16,31 +16,27 @@
     </head>
     <body>
         <div id="head">
-            <img id="logo" src="/img/avatar_big.jpeg"/>
+            <a href="/"><img id="logo" src="/img/avatar_big.jpeg"/></a>
             <div id="label">Web, Code & Coffee</div>
             <ul id="menu">
                 <li class="about"><a href="/about.html">About</a></li>
                 <li class="crly"><a href="/crly.html">Crly</a></li>
                 <li class="software"><a href="/software.html">Software</a></li>
-                <li><a href="/">WC&C</a></li>
+                <li class="blog"><a href="/">WC&C</a></li>
             </ul>
         </div>
         <div style="clear:both"></div>
         <div id="content"><h1>About</h1>
 
+<blockquote>
 <p>We&#39;re all gonna die, let&#39;s make a fucking nice cake!?</p>
-
-<h2>Software</h2>
+</blockquote>
 
 <p>I do some hacking.</p>
 
-<h2>Music</h2>
-
 <p>I hum and strum.</p>
 
-<h2>Coffee</h2>
-
-<p>Coffee is a big part of my life.</p>
+<p>I&#39;m an amateur coffee fanatic. My preferred brewing method is pourover by <a href="http://www.chemexcoffeemaker.com">Chemex</a>. I prefer light and floral african beans, pulp or washed. I get my coffee from a number of places including <a href="http://www.coffeeberry.no">Coffeeberry</a>, <a href="http://timwendelboe.no">Tim Wendelboe</a>, <a href="http://www.kaffa.no">Kaffa</a> and <a href="http://shop.squaremilecoffee.com">Square Mile Coffee</a>.</p>
 </div>
         <div id="footer"></div>
     </body>
