--- a/crly.html
+++ b/crly.html
@@ -16,13 +16,13 @@
     </head>
     <body>
         <div id="head">
-            <img id="logo" src="/img/avatar_big.jpeg"/>
+            <a href="/"><img id="logo" src="/img/avatar_big.jpeg"/></a>
             <div id="label">Web, Code & Coffee</div>
             <ul id="menu">
                 <li class="about"><a href="/about.html">About</a></li>
                 <li class="crly"><a href="/crly.html">Crly</a></li>
                 <li class="software"><a href="/software.html">Software</a></li>
-                <li><a href="/">WC&C</a></li>
+                <li class="blog"><a href="/">WC&C</a></li>
             </ul>
         </div>
         <div style="clear:both"></div>
