More responsice updates

--- a/about.html
+++ b/about.html
@@ -26,7 +26,8 @@
             </ul>
         </div>
         <div style="clear:both"></div>
-        <div id="content"><h1>About</h1>
+        <div id="content">
+            <h1>About</h1>
 
 <blockquote>
 <p>We&#39;re all gonna die, let&#39;s make a fucking nice cake!?</p>
@@ -37,7 +38,9 @@
 <p>I hum and strum.</p>
 
 <p>I&#39;m an amateur coffee fanatic. My preferred brewing method is pourover by <a href="http://www.chemexcoffeemaker.com">Chemex</a>. I prefer light and floral african beans, pulp or washed. I get my coffee from a number of places including <a href="http://www.coffeeberry.no">Coffeeberry</a>, <a href="http://timwendelboe.no">Tim Wendelboe</a>, <a href="http://www.kaffa.no">Kaffa</a> and <a href="http://shop.squaremilecoffee.com">Square Mile Coffee</a>.</p>
-</div>
+
+            <div class="push"></div>
+        </div>
         <div id="footer"></div>
     </body>
 </html>
