--- a/base.html
+++ b/base.html
@@ -26,7 +26,10 @@
             </ul>
         </div>
         <div style="clear:both"></div>
-        <div id="content"><%block name="content"/></div>
+        <div id="content">
+            <%block name="content"/>
+            <div class="push"></div>
+        </div>
         <div id="footer"></div>
     </body>
 </html>
