--- a/crly.html
+++ b/crly.html
@@ -27,10 +27,13 @@
         </div>
         <div style="clear:both"></div>
         <div id="content">
+            
 	<p>
 		Exciting stuff will appear here soon :-D
 	</p>
-</div>
+
+            <div class="push"></div>
+        </div>
         <div id="footer"></div>
     </body>
 </html>
