--- a/index.html
+++ b/index.html
@@ -27,8 +27,11 @@
         </div>
         <div style="clear:both"></div>
         <div id="content">
+            
 	loop over blog here... and some things
-</div>
+
+            <div class="push"></div>
+        </div>
         <div id="footer"></div>
     </body>
 </html>
