--- a/software.html
+++ b/software.html
@@ -26,7 +26,8 @@
             </ul>
         </div>
         <div style="clear:both"></div>
-        <div id="content"><h1>Centipede</h1>
+        <div id="content">
+            <h1>Centipede</h1>
 
 <blockquote>
 <p>A tiny RESTful API framework</p>
@@ -41,7 +42,9 @@
 </blockquote>
 
 <p>Trallaleiiiii</p>
-</div>
+
+            <div class="push"></div>
+        </div>
         <div id="footer"></div>
     </body>
 </html>
