--- a/software.html
+++ b/software.html
@@ -27,21 +27,19 @@
         </div>
         <div style="clear:both"></div>
         <div id="content">
-            <h1>Centipede</h1>
+            <h1><a href="https://github.com/asbjornenge/centipede">Centipede</a></h1>
 
 <blockquote>
 <p>A tiny RESTful API framework</p>
 </blockquote>
 
-<p><a href="http://asbjornenge.com/soft/centipede.html">Centipede</a> aims to facilitate the creation RESTful API&#39;s.</p>
+<p>Centipede aims to facilitate the creation RESTful API&#39;s.</p>
 
-<h1>TapJS</h1>
+<h1><a href="https://github.com/asbjornenge/tapjs">TapJS</a></h1>
 
 <blockquote>
 <p>Touch events for touch devices</p>
 </blockquote>
-
-<p>Trallaleiiiii</p>
 
             <div class="push"></div>
         </div>
