Crly avatar and more

--- a/base.html
+++ b/base.html
@@ -16,8 +16,8 @@
     </head>
     <body>
         <div id="head">
-            <a href="/"><img id="logo" src="/img/avatar_big.jpeg"/></a>
-            <div id="label">Web, Code & Coffee</div>
+            <a href="/"><%block name="logo"><img id="logo" src="/img/avatar_asbjornenge.jpeg"/></%block></a>
+            <div id="label"><%block name="label">Web, Code & Coffee</%block></div>
             <ul id="menu">
                 <li class="about"><a href="/about.html">About</a></li>
                 <li class="crly"><a href="/crly.html">Crly</a></li>
