--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </head>
     <body>
         <div id="head">
-            <a href="/"><img id="logo" src="/img/avatar_big.jpeg"/></a>
+            <a href="/"><img id="logo" src="/img/avatar_asbjornenge.jpeg"/></a>
             <div id="label">Web, Code & Coffee</div>
             <ul id="menu">
                 <li class="about"><a href="/about.html">About</a></li>
