Testing tap and new menu font size

--- a/crly.html
+++ b/crly.html
@@ -12,6 +12,7 @@
         <link href='http://fonts.googleapis.com/css?family=Bilbo+Swash+Caps' rel='stylesheet' type='text/css'>
         <script src="/js/lib/ga.js"></script>
         <script src="/js/lib/jquery-1.9.0.min.js"></script>
+        <script src="/js/lib/tap.js"></script>
         <script src="/js/init.js" type="text/javascript"></script>
     </head>
     <body>
@@ -29,7 +30,6 @@
         <div id="content">
             
 	<p>
-		Exciting stuff will appear here soon :-D
 	</p>
 
             <div class="push"></div>
