--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <link href='http://fonts.googleapis.com/css?family=Bilbo+Swash+Caps' rel='stylesheet' type='text/css'>
         <script src="/js/lib/ga.js"></script>
         <script src="/js/lib/jquery-1.9.0.min.js"></script>
+        <script src="/js/lib/tap.js"></script>
         <script src="/js/init.js" type="text/javascript"></script>
     </head>
     <body>
