Testing nav for iphone

--- a/crly.html
+++ b/crly.html
@@ -21,8 +21,11 @@
             <div id="label">Curly Bracket</div>
             <ul id="menu">
                 <li class="about"><a href="/about.html">About</a></li>
+                <li class="separator">:</li>
                 <li class="crly"><a href="/crly.html">Crly</a></li>
+                <li class="separator">:</li>
                 <li class="software"><a href="/software.html">Software</a></li>
+                <li class="separator">:</li>
                 <li class="blog"><a href="/">WC&C</a></li>
             </ul>
         </div>
