Updated about text

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
 <p>We&#39;re all gonna die, let&#39;s make a fucking nice cake!?</p>
 </blockquote>
 
-<p>I&#39;m an amateur coffee fanatic. My preferred brewing method is pourover by <a href="http://www.chemexcoffeemaker.com">Chemex</a>. I prefer light and floral african beans, pulp or washed. I get my coffee from a number of places including <a href="http://www.coffeeberry.no">Coffeeberry</a>, <a href="http://timwendelboe.no">Tim Wendelboe</a>, <a href="http://www.kaffa.no">Kaffa</a> and <a href="http://shop.squaremilecoffee.com">Square Mile Coffee</a>.</p>
+<p>I&#39;m an amateur coffee fanatic. My preferred brewing method is pourover by <a href="http://www.chemexcoffeemaker.com">Chemex</a>. I prefer light and floral african beans, washed. I get my coffee from a number of places including <a href="http://www.coffeeberry.no">Coffeeberry</a>, <a href="http://timwendelboe.no">Tim Wendelboe</a>, <a href="http://www.kaffa.no">Kaffa</a> and <a href="http://shop.squaremilecoffee.com">Square Mile Coffee</a>.</p>
 
             <div class="push"></div>
         </div>
