--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li class="separator">:</li>
                 <li class="blog"><a href="/">WC&C</a></li>
             </ul>
+            <span class="nav_selector">&nbsp;</span>
         </div>
         <div style="clear:both"></div>
         <div id="content">
