--- a/crly.html
+++ b/crly.html
@@ -20,13 +20,13 @@
             <a href="/"><img id="logo" src="/img/avatar_crly.png"/></a>
             <div id="label">Curly Bracket</div>
             <ul id="menu">
-                <li class="about"><a href="/about.html">About</a></li>
+                <li class="about nav_item" link="/about.html">About</li>
                 <li class="separator">:</li>
-                <li class="crly"><a href="/crly.html">Crly</a></li>
+                <li class="crly nav_item" link="/crly.html">Crly</li>
                 <li class="separator">:</li>
-                <li class="software"><a href="/software.html">Software</a></li>
+                <li class="software nav_item" link="/software.html">Software</li>
                 <li class="separator">:</li>
-                <li class="blog"><a href="/">WC&C</a></li>
+                <li class="blog nav_item" link="/">WC&C</li>
             </ul>
             <span class="nav_selector">&nbsp;</span>
         </div>
