Fixed content replacement for history api events and added some other nice things

--- a/base.html
+++ b/base.html
@@ -17,8 +17,10 @@
     </head>
     <body>
         <div id="head">
-            <a href="/"><%block name="logo"><img id="logo" src="/img/avatar_asbjornenge.jpeg"/></%block></a>
-            <div id="label"><%block name="label">Web, Code & Coffee</%block></div>
+            <a link="/" class="nav_item">
+                <%block name="logo"><img id="logo" src="/img/avatar_asbjornenge.jpeg"/></%block>
+            </a>
+            <div id="label"><%block name="label">Web & Words</%block></div>
             <ul id="menu">
                 <li class="about nav_item" link="/about.html">About</li>
                 <li class="separator">:</li>
