--- a/software.html
+++ b/software.html
@@ -17,7 +17,9 @@
     </head>
     <body>
         <div id="head">
-            <a href="/"><img id="logo" src="/img/avatar_asbjornenge.jpeg"/></a>
+            <a link="/" class="nav_item">
+                <img id="logo" src="/img/avatar_asbjornenge.jpeg"/>
+            </a>
             <div id="label">Software</div>
             <ul id="menu">
                 <li class="about nav_item" link="/about.html">About</li>
