--- a/about.html
+++ b/about.html
@@ -17,8 +17,10 @@
     </head>
     <body>
         <div id="head">
-            <a href="/"><img id="logo" src="/img/avatar_asbjornenge.jpeg"/></a>
-            <div id="label">Web, Code & Coffee</div>
+            <a link="/" class="nav_item">
+                <img id="logo" src="/img/avatar_asbjornenge.jpeg"/>
+            </a>
+            <div id="label">About</div>
             <ul id="menu">
                 <li class="about nav_item" link="/about.html">About</li>
                 <li class="separator">:</li>
