--- a/base.html
+++ b/base.html
@@ -20,7 +20,7 @@
             <a link="/" class="nav_item">
                 <%block name="logo"><img id="logo" src="/img/avatar_asbjornenge.jpeg"/></%block>
             </a>
-            <div id="label"><%block name="label">Web & Words</%block></div>
+            <div id="label"><%block name="label">Web, Words & Coffee</%block></div>
             <ul id="menu">
                 <li class="about nav_item" link="/about.html">About</li>
                 <li class="separator">:</li>
@@ -28,7 +28,7 @@
                 <li class="separator">:</li>
                 <li class="software nav_item" link="/software.html">Software</li>
                 <li class="separator">:</li>
-                <li class="blog nav_item" link="/">WC&C</li>
+                <li class="blog nav_item" link="/">WW&C</li>
             </ul>
             <span class="nav_selector">&nbsp;</span>
         </div>
