--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <a link="/" class="nav_item">
                 <img id="logo" src="/img/avatar_asbjornenge.jpeg"/>
             </a>
-            <div id="label">Web & Words</div>
+            <div id="label">Web, Words & Coffee</div>
             <ul id="menu">
                 <li class="about nav_item" link="/about.html">About</li>
                 <li class="separator">:</li>
@@ -28,14 +28,14 @@
                 <li class="separator">:</li>
                 <li class="software nav_item" link="/software.html">Software</li>
                 <li class="separator">:</li>
-                <li class="blog nav_item" link="/">WC&C</li>
+                <li class="blog nav_item" link="/">WW&C</li>
             </ul>
             <span class="nav_selector">&nbsp;</span>
         </div>
         <div style="clear:both"></div>
         <div id="content">
             
-	loop over blog here... and some things
+	Blog arriving soon!
 
             <div class="push"></div>
         </div>
