--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <a link="/" class="nav_item">
                 <img id="logo" src="/img/avatar_asbjornenge.jpeg"/>
             </a>
-            <div id="label">About</div>
+            <div id="label">@asbjornenge</div>
             <ul id="menu">
                 <li class="about nav_item" link="/about.html">About</li>
                 <li class="separator">:</li>
@@ -28,7 +28,7 @@
                 <li class="separator">:</li>
                 <li class="software nav_item" link="/software.html">Software</li>
                 <li class="separator">:</li>
-                <li class="blog nav_item" link="/">WC&C</li>
+                <li class="blog nav_item" link="/">WW&C</li>
             </ul>
             <span class="nav_selector">&nbsp;</span>
         </div>
@@ -37,7 +37,7 @@
             <h1>About</h1>
 
 <blockquote>
-<p>We&#39;re all gonna die, let&#39;s make a fucking nice cake!?</p>
+<p>We&#39;re alive once, let&#39;s make a fucking nice cake!</p>
 </blockquote>
 
 <p>I&#39;m an amateur coffee fanatic. My preferred brewing method is pourover by <a href="http://www.chemexcoffeemaker.com">Chemex</a>. I prefer light and floral african beans, washed. I get my coffee from a number of places including <a href="http://www.coffeeberry.no">Coffeeberry</a>, <a href="http://timwendelboe.no">Tim Wendelboe</a>, <a href="http://www.kaffa.no">Kaffa</a> and <a href="http://shop.squaremilecoffee.com">Square Mile Coffee</a>.</p>
