--- a/crly.html
+++ b/crly.html
@@ -20,7 +20,7 @@
             <a link="/" class="nav_item">
                 <img id="logo" src="/img/avatar_crly.png"/>
             </a>
-            <div id="label">Curly Bracket</div>
+            <div id="label">Curly Bracket Software</div>
             <ul id="menu">
                 <li class="about nav_item" link="/about.html">About</li>
                 <li class="separator">:</li>
@@ -28,7 +28,7 @@
                 <li class="separator">:</li>
                 <li class="software nav_item" link="/software.html">Software</li>
                 <li class="separator">:</li>
-                <li class="blog nav_item" link="/">WC&C</li>
+                <li class="blog nav_item" link="/">WW&C</li>
             </ul>
             <span class="nav_selector">&nbsp;</span>
         </div>
