Minor text change

--- a/software.html
+++ b/software.html
@@ -37,10 +37,10 @@
             <h1><a href="https://github.com/asbjornenge/centipede">Centipede</a></h1>
 
 <blockquote>
-<p>A tiny RESTful API framework</p>
+<p>A tiny python RESTful API framework</p>
 </blockquote>
 
-<p>Centipede aims to facilitate the creation RESTful API&#39;s.</p>
+<p>Centipede aims to facilitate quick creation of RESTful API&#39;s.</p>
 
 <h1><a href="https://github.com/asbjornenge/tapjs">TapJS</a></h1>
 
