A few new things :-P

--- a/software.html
+++ b/software.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="/css/reset.css">
         <link rel="stylesheet" href="/css/fonts.css">
         <link rel="stylesheet" href="/css/asbjornenge.css">
+        <link rel="stylesheet" href="/css/font-awesome.min.css">
         <link href='http://fonts.googleapis.com/css?family=Elsie' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Bilbo+Swash+Caps' rel='stylesheet' type='text/css'>
         <script src="/js/lib/ga.js"></script>
@@ -24,11 +25,13 @@
             <ul id="menu">
                 <li class="about nav_item" link="/about.html">About</li>
                 <li class="separator">:</li>
+                <!--
                 <li class="crly nav_item" link="/crly.html">Crly</li>
                 <li class="separator">:</li>
+                -->
                 <li class="software nav_item" link="/software.html">Software</li>
                 <li class="separator">:</li>
-                <li class="blog nav_item" link="/">WW&C</li>
+                <li class="blog nav_item" link="/">Blog</li>
             </ul>
             <span class="nav_selector">&nbsp;</span>
         </div>
@@ -42,11 +45,11 @@
 
 <p>Centipede aims to facilitate quick creation of RESTful API&#39;s.</p>
 
-<h1><a href="https://github.com/asbjornenge/tapjs">TapJS</a></h1>
+<!--
+# [TapJS](https://github.com/asbjornenge/tapjs)
 
-<blockquote>
-<p>Touch events for touch devices</p>
-</blockquote>
+> Touch events for touch devices
+-->
 
             <div class="push"></div>
         </div>
