--- a/about.html
+++ b/about.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="/css/reset.css">
         <link rel="stylesheet" href="/css/fonts.css">
         <link rel="stylesheet" href="/css/asbjornenge.css">
+        <link rel="stylesheet" href="/css/font-awesome.min.css">
         <link href='http://fonts.googleapis.com/css?family=Elsie' rel='stylesheet' type='text/css'>
         <link href='http://fonts.googleapis.com/css?family=Bilbo+Swash+Caps' rel='stylesheet' type='text/css'>
         <script src="/js/lib/ga.js"></script>
@@ -24,21 +25,19 @@
             <ul id="menu">
                 <li class="about nav_item" link="/about.html">About</li>
                 <li class="separator">:</li>
+                <!--
                 <li class="crly nav_item" link="/crly.html">Crly</li>
                 <li class="separator">:</li>
+                -->
                 <li class="software nav_item" link="/software.html">Software</li>
                 <li class="separator">:</li>
-                <li class="blog nav_item" link="/">WW&C</li>
+                <li class="blog nav_item" link="/">Blog</li>
             </ul>
             <span class="nav_selector">&nbsp;</span>
         </div>
         <div style="clear:both"></div>
         <div id="content">
             <h1>About</h1>
-
-<blockquote>
-<p>We&#39;re alive once, let&#39;s make a fucking nice cake!</p>
-</blockquote>
 
 <p>I&#39;m an amateur coffee fanatic. My preferred brewing method is pourover by <a href="http://www.chemexcoffeemaker.com">Chemex</a>. I prefer light and floral african beans, washed. I get my coffee from a number of places including <a href="http://www.coffeeberry.no">Coffeeberry</a>, <a href="http://timwendelboe.no">Tim Wendelboe</a>, <a href="http://www.kaffa.no">Kaffa</a> and <a href="http://shop.squaremilecoffee.com">Square Mile Coffee</a>.</p>
 
