Added enjoy footer

--- a/base.html
+++ b/base.html
@@ -40,6 +40,6 @@
             <%block name="content"/>
             <div class="push"></div>
         </div>
-        <div id="footer"></div>
+        <div id="footer">enjoy.</div>
     </body>
 </html>
