--- a/wwc/introducing_gymb.html
+++ b/wwc/introducing_gymb.html
@@ -45,6 +45,6 @@
 
             <div class="push"></div>
         </div>
-        <div id="footer"></div>
+        <div id="footer">enjoy.</div>
     </body>
 </html>
