--- a/about.html
+++ b/about.html
@@ -43,6 +43,6 @@
 
             <div class="push"></div>
         </div>
-        <div id="footer"></div>
+        <div id="footer">enjoy.</div>
     </body>
 </html>
