Added new font, worked a bit on markdown margins and renamed blog

--- a/base.html
+++ b/base.html
@@ -21,7 +21,7 @@
             <a link="/" class="nav_item">
                 <%block name="logo"><img id="logo" src="/img/avatar_asbjornenge.jpeg"/></%block>
             </a>
-            <div id="label"><%block name="label">Web, Words & Coffee</%block></div>
+            <div id="label"><%block name="label">Web, Waves & Coffee</%block></div>
             <ul id="menu">
                 <li class="about nav_item" link="/about.html">About</li>
                 <li class="separator">:</li>
