--- a/wwc/json_schema.html
+++ b/wwc/json_schema.html
@@ -21,7 +21,7 @@
             <a link="/" class="nav_item">
                 <img id="logo" src="/img/avatar_asbjornenge.jpeg"/>
             </a>
-            <div id="label">Web, Words & Coffee</div>
+            <div id="label">Web, Waves & Coffee</div>
             <ul id="menu">
                 <li class="about nav_item" link="/about.html">About</li>
                 <li class="separator">:</li>
@@ -39,10 +39,8 @@
         <div id="content">
             <h1>JSON Schema Validation</h1>
 
-<p>Your probably pulling &amp; pushing data to and from a JSON RESTful api, right? At least you should be.<br>
-If you care about making a great application, you need to care about error handling. Both on the client and the server side. Handling timeouts and dead API&#39;s is easy enough, but handling corrupt data can be kind of hard.</p>
-
-<p>Protecting against corrupt data usually leaves an ugly footprint in your code. Lot&#39;s of <strong>if</strong>&#39;s and <strong>hasOwnProperty</strong>&#39;s. Instead, using <a href="http://json-schema.org">json-schema</a>, you can validate your JSON data first and be sure it is as expected.</p>
+<p>Your probably pulling &amp; pushing data to and from a JSON RESTful api, right?<br>
+If you care about making a great application, you need to care about error handling. Both on the client and the server side. Handling timeouts and dead API&#39;s is easy enough, but handling corrupt data can be tricky. Protecting against corrupt data usually leaves an ugly footprint in your code. Lot&#39;s of <strong>if</strong>&#39;s and <strong>hasOwnProperty</strong>&#39;s. Instead, using <a href="http://json-schema.org">json-schema</a>, you can validate your JSON data first and be sure it is as expected.</p>
 
 <h2>JSON-Schema</h2>
 
