--- a/wwc/introducing_gymb.html
+++ b/wwc/introducing_gymb.html
@@ -21,7 +21,7 @@
             <a link="/" class="nav_item">
                 <img id="logo" src="/img/avatar_asbjornenge.jpeg"/>
             </a>
-            <div id="label">Web, Words & Coffee</div>
+            <div id="label">Web, Waves & Coffee</div>
             <ul id="menu">
                 <li class="about nav_item" link="/about.html">About</li>
                 <li class="separator">:</li>
