Lots of css updates

--- a/wwc/json_schema.html
+++ b/wwc/json_schema.html
@@ -80,7 +80,7 @@ If you care about making a great application, you need to care about error handl
 
 <h2>Usage</h2>
 
-<p>I&#39;m not going to cover the whole specification here, but I&#39;ll highlight a few of the possibilites.</p>
+<p>I&#39;m not going to cover the whole specification here, but I&#39;ll try to highlight the most important bits and some of possibilites I found really useful.</p>
 
 <h4><em>type</em></h4>
 
