Re-introduced label

--- a/wwc/introducing_gymb.html
+++ b/wwc/introducing_gymb.html
@@ -43,6 +43,11 @@
 <p>Gymb ~ The Github Python Markdown Blogger.</p>
 </blockquote>
 
+<h2>Index</h2>
+
+<p>The gymb.json could easily be used to build an index to be user for searches, tags and other nice things.
+I&#39;ll be happy to accept pull requests for a <em>gymb index</em> or similar :-)</p>
+
             <div class="push"></div>
         </div>
         <div id="footer">enjoy.</div>
