--- a/software.html
+++ b/software.html
@@ -21,7 +21,7 @@
             <a link="/" class="nav_item">
                 <img id="logo" src="/img/avatar_asbjornenge.jpeg"/>
             </a>
-            <div id="label">Free Software</div>
+            <div id="label">freedom() {}</div>
             <ul id="menu">
                 <li class="about nav_item" link="/about.html">About</li>
                 <li class="separator">:</li>
